# proofpatch

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: smt.md
fixtures/lean-fixture/: LeanFixture.lean  lake-manifest.json
fixtures/lean-fixture/LeanFixture/: SmtDemo.lean
mcp-server/: Cargo.toml
mcp-server/examples/: stdio_smoke.rs
mcp-server/src/: main.rs
proofloops-core/: Cargo.toml
proofloops-core/src/: lib.rs  llm.rs  review.rs
proofloops-core/tests/: env_loading.rs  patching.rs  research_ingest.rs
proofpatch-cli/: Cargo.toml
proofpatch-cli/src/: main.rs
proofpatch-core/: build.rs
proofpatch-core/src/: arxiv.rs  config.rs  lib.rs  llm.rs  lsp_client.rs  planner.rs  smt_lia.rs  tree_search.rs
proofpatch-core/tests/: config_parse.rs  hints.rs  patching.rs  research_ingest.rs  tree_search.rs
proofpatch-lean-embed/: build.rs
proofpatch-lean-embed/src/: lib.rs
proofyloops-core/: Cargo.toml
proofyloops-core/src/: lib.rs  llm.rs
