[package]
name = "proofpatch-mcp"
version = "0.1.0"
edition = "2021"
publish = false

description = "MCP server wrapper for proofpatch (axum-mcp)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arclabs561/proofpatch"
homepage = "https://github.com/arclabs561/proofpatch"
readme = "../README.md"

[[bin]]
name = "proofpatch-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
axum-mcp = { git = "https://github.com/arclabs561/axum-mcp.git", rev = "b9a648182cf0377e7fb5e4189e19b7298c47a98f", package = "axum-mcp" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smtkit = "0.1.0"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
proofpatch-core = { path = "../proofpatch-core" }
rmcp = { version = "0.12.0", optional = true, features = ["macros", "server", "client", "transport-io", "transport-child-process", "schemars"] }
schemars = { version = "1.2.0", optional = true, features = ["derive"] }

[features]
# Default should “just work” in Cursor: enable stdio MCP mode.
default = ["stdio"]
stdio = ["dep:rmcp", "dep:schemars"]

